[package]
name = "quantum_ray_marching"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "^0.24"
nalgebra-glm = "^0.17.0"
nalgebra = {version =  "^0.31.0", features = ["serde-serialize"]}
tobj = "^3.2.2"
ndarray = "0.15.6"
itertools = "0.10.5"
rayon = "1.6.1"
rand = "0.8.5"
fixed = "1.23.0"
indicatif = {version = "*", features = ["rayon"]}
serde = "1.0"
serde_json = "1.0"
az = "1.2.1"
